# FHook

./: LICENSE  LICENSE.agent-binary  README.cn.md  README.en.md  README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
app/: build.gradle
app/src/androidTest/java/top/feadre/fhook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ftest/: t01.cpp  t01.h
app/src/main/java/top/feadre/fhook/: FBusiness.java  FCFG.java  MyApp.java  THook.java  TObject.java
app/src/main/java/top/feadre/fhook/activitys/: DebugActivity.java  DebugSample.java  DebugSampleActivity.java  FHookActivity.java  FHookActivityHelp.java  FHookDebugActivity.java  MainActivity.java  MainActivityHelp.java
app/src/main/java/top/feadre/fhook/tools/: FFunsUI.java
app/src/main/res/layout/: activity_fhook.xml  activity_fhook_debug.xml  activity_main.xml  debug_sample.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/top/feadre/fhook/: ExampleUnitTest.java
fhook/: build.gradle  consumer-rules.pro
fhook/src/androidTest/java/top/feadre/fhook/: ExampleInstrumentedTest.java
fhook/src/main/cpp/: CMakeLists.txt  FGlobal_flib.cpp  FGlobal_flib.h
fhook/src/main/cpp/agent/: fhook_agent.cpp  fhook_agent.h  finject.cpp  finject.h  fir.cpp  fir.h  fir_funs_def.cpp  fir_funs_def.h  fir_funs_do.cpp  fir_funs_do.h  fir_funs_do_impl.cpp  fir_funs_do_impl.h  fir_tools.cpp  fir_tools.h  fjava_api.cpp  fjava_api.h  freg_allocator.cpp  freg_allocator.h  freg_manager.cpp  freg_manager.h  freplace_fun.cpp  freplace_fun.h  fsmali_printer.cpp  fsmali_printer.h  transform.cpp  transform.h
fhook/src/main/cpp/dexter/: version.txt
fhook/src/main/cpp/dexter/slicer/: code_ir.h  dex_ir.h  dex_ir_builder.h  instrumentation.h  intrusive_list.h
fhook/src/main/cpp/ftest/: fhook_agent.cpp  t01.cpp
fhook/src/main/cpp/include/: fhook_agent_out.h
fhook/src/main/cpp/main/: fhook.cpp  fhook.h
fhook/src/main/cpp/tools/: fsys.cpp  fsys.h
fhook/src/main/java/top/feadre/fhook/: CLinker.java  FCFG.java  FCFG_fhook.java  FHook.java  FHookTool.java  HookHandle.java  HookParam.java
fhook/src/main/java/top/feadre/fhook/flibs/fsys/: FLog.java  TypeUtils.java
gradle/wrapper/: gradle-wrapper.properties
